# ontosemantics

./: .gitignore  MANIFEST.in  Pipfile  README.md  classes.dot  config.yaml  docker-compose.yml  docker_compose.yml  environment.yml  packages.dot  requirements.txt  settings.py  setup.cfg  setup.py
bioengine/: __init__.py  ontologymanager.py
bioengine/config/: default.yaml
bioengine/cypher_engine/: biolink_mapping.py  gen_model.py
bioengine/dochandlers/: bioc_dataset.py  txt_file_handler.py
bioengine/knowledge_engine/: __init__.py  biolink_mapping.py  evaluate_quick.py  gen_model.py  graph_rag.py  hierarchical_verifier.py  knowledge_resolution.py  match.py  mpgnn.py  ontology_embeddings.py  ontology_manager.py  sparql_gen.py
bioengine/nlp_processor/: __init__.py  entity_normalization.py  llm_extractor.py  ontological_rag.py  relationship_extractor.py  spacy_factory.py  verb_extractor.py
bioengine/scripts/: generate_knowledge.py  get_abstracts.py
bioengine/utils/: __init__.py  eval.py  pythonic_name.py
conda.recipe/: build.sh  meta.yaml
evaluation/cases/: case.py  case_paper_from_pdf.py  extract_database_relations_to_csv.py  sentence.tsv
evaluation/resources/: cdr_eval.csv  cdr_eval.xml
meta_classes/: __init__.py  singleton_meta.py
notebooks/: evaluation_utils.py  graph_loader.ipynb  graph_visual.py  ontology.ipynb  ontology_embeddings.ipynb  processing_utils.py  re_eval.ipynb  relation_extraction.ipynb  trm_re.ipynb
notebooks/colab/: bioc.py  processing_utils.py
resources/extracted_text/: Insulin_resistance.txt  Johnston2003.txt  asprin.txt  cardio_vascular.txt  diabetes.txt  hypo.txt  myocardial_infarction.txt  taniguchi2006.txt  whitehead2000.txt
scripts/: download_ontologies.sh
src/: settings.py
src/bioengine/: __init__.py  entity_rec_dataset.py  generate_knowledge.py  get_nouns.py  ner-tag.py  ontology_concepts.py  (+6 more)
(+2650 files in other folders)
