[metadata]
name = bioengine
version = 0.2.0
description = Tools for processing biomedical literature and building knowledge graphs
long_description = file: README.md
long_description_content_type = text/markdown
author = Matthew Drago
author_email = matthew.drago.16@um.edu.mt
url = https://github.com/mdrago98/bioengine
license = MIT
keywords = biomedical, nlp, knowledge-graph
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
packages = find:
py_modules = settings
include_package_data = True
zip_safe = False
python_requires = >=3.9
install_requires =
    beautifulsoup4>=4.9
    numpy>=1.23
    pandas>=1.5
    py2neo>=2021.2.4
    PyYAML>=6.0
    requests>=2.31
    tqdm>=4.64

[options.packages.find]
include = bioengine*,meta_classes*,resources*
exclude = notebooks*,tests*,evaluation*,data*

[options.package_data]
bioengine = config/*.yaml
resources = **/*

[options.extras_require]
kg =
    networkx>=3.0
    rdflib>=6.3
    pyoxigraph>=0.3
nlp =
    spacy>=3.7
    gensim>=4.3
    nltk>=3.8
    rapidfuzz>=3.5
    torch>=2.1
    transformers>=4.36
rag =
    langchain>=0.2
    langchain-core>=0.2
    langchain-community>=0.2
    langgraph>=0.2
    httpx>=0.25
ocr =
    pillow>=10.0
    PyPDF2>=3.0
    pyocr>=0.8
    wand>=0.6
full =
    rdflib>=6.3
    pyoxigraph>=0.3
    spacy>=3.7
    gensim>=4.3
    nltk>=3.8
    torch>=2.1
    transformers>=4.36
    langchain>=0.2
    langchain-core>=0.2
    langchain-community>=0.2
    langgraph>=0.2
    httpx>=0.25
